--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     </div>
   </main>
 
-    <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/azizbna">Mohamed Aziz Ben Aissa</a>.
-  </div>
+    <footer>
+      <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/azizbna">Mohamed Aziz Ben Aissa</a>.
+        </div>
+    </footer>
 </body>
 
 </html>
